--- a/Server/apps/mpconsole/templates/base.html
+++ b/Server/apps/mpconsole/templates/base.html
@@ -187,6 +187,7 @@
 						<li id="admin">
 							<a href="#"><i class="fa fa-cog fa-fw"></i> Admin<span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level">
+								{% if session.role[0] == 1 %}
 								<li>
 									<a href="#"><i class="fa fa-cogs fa-fw"></i> Client Agent<span class="fa arrow"></span></a>
 									<ul class="nav nav-third-level">
@@ -218,7 +219,7 @@
 								<li>
 									<a href="{{ url_for('console.accounts') }}"><i class="fa fa-users fa-fw"></i> Accounts</a>
 								</li>
-
+								{% endif %}
 							</ul>
 							<!-- /.nav-second-level -->
 						</li>
