--- a/Server/apps/mpconsole/templates/client_download.html
+++ b/Server/apps/mpconsole/templates/client_download.html
@@ -26,54 +26,62 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
+    <script>
+        function downloadAgent(path) {
+            var iframe = document.getElementById('dlagent');
+            iframe.src = path;
+        }
+	</script>
+
 </head>
 
 <body>
 
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-6 col-md-offset-3">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading text-center">
                         <img class="center-block" src="{{ url_for('static', filename='img/mp_3_icon_90.png') }}" />
-                        <h4 class="center-block">MacPatch Admin Console</h4>
+                        <h4 class="center-block">MacPatch Client Agent</h4>
                     </div>
                     <div class="panel-body">
-
-
-                        <br>
-                        <form role="form" action="" method="post">
-                            {{form.hidden_tag()}}
-                            <fieldset>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Username" name="username" type="username" autofocus>
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input name="remember_me" type="checkbox" value="Remember Me">Remember Me
-                                    </label>
-                                </div>
-                                <input class="btn btn-lg btn-login-alt btn-block" type="submit" value="Login">
-                                <!--
-                                btn-login-alt
-                                btn-success
-                                -->
-                            </fieldset>
-                        </form>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Agent</th>
+                                        <th>Version</th>
+                                        <th>Date</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for row in data %}
+                                    <tr>
+                                        <td>
+                                            <a href="#" onclick="downloadAgent('/mp-content/clients/{{row.puuid}}/MPClientInstall.pkg.zip');return false;">
+                                                <i class="glyphicon glyphicon-save"></i> MPClientInstall.pkg.zip
+                                            </a>
+                                        </td>
+                                        <td>{{row.version}}</td>
+                                        <td>{{row.mdate}}</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                        <iframe id="dlagent" style="display:none;"></iframe>
                     </div>
                     <div class="panel-footer text-center">
-                        <a href="/agent/download">
-                            <h5>Client Download</h5>
+                        <a href="/auth/login">
+                            <h5>MacPatch Admin Console</h5>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
             <div class="row">
-                <div class="col-md-4 col-md-offset-4">
+                <div class="col-md-6 col-md-offset-3">
                     <article class="flashes">
                         {% with messages = get_flashed_messages() %}
                           {% if messages %}
