Fixed Issues with Custom patch removal

--- a/Server/apps/mpconsole/templates/patches/patches_custom.html
+++ b/Server/apps/mpconsole/templates/patches/patches_custom.html
@@ -151,32 +151,36 @@
 	{
 		$delButton.click(function ()
 		{
-			var rows = $('#table').bootstrapTable('getAllSelections');
-			var rowsArr = [];
-			for (x in rows) {
-				var _patchID = rows[x]['puuid'];
-				rowsArr.push(_patchID);
-			}
-
-			var _url = "/patches/custom/delete";
-			$.ajax({
-				url: _url,
-				type: 'DELETE',
-				cache: false,
-				data: {'patches':rowsArr.toString()},
-				error: function (request, status, error)
-				{
-					jsonValue = jQuery.parseJSON( request.responseText );
-					alert(jsonValue.errormsg);
-				},
-				success: function () {
-					$('#table').bootstrapTable('remove', {
-						field: 'puuid',
-						values: rowsArr
-					});
-					alert("Patch(es) removed successfully.");
+			confirm_str = "Are you sure you want to remove these patch(es)?";
+			if (confirm(confirm_str) == true)
+			{
+				var rows = $('#table').bootstrapTable('getAllSelections');
+				var rowsArr = [];
+				for (x in rows) {
+					var _patchID = rows[x]['puuid'];
+					rowsArr.push(_patchID);
 				}
-			});
+
+				var _url = "/patches/custom/delete";
+				$.ajax({
+					url: _url,
+					type: 'DELETE',
+					cache: false,
+					data: {'patches':rowsArr.toString()},
+					error: function (request, status, error)
+					{
+						jsonValue = jQuery.parseJSON( request.responseText );
+						alert(jsonValue.errormsg);
+					},
+					success: function () {
+						$('#table').bootstrapTable('remove', {
+							field: 'puuid',
+							values: rowsArr
+						});
+						alert("Patch(es) removed successfully.");
+					}
+				});
+			}
 		});
 
 		$addButton.click(function ()
