--- a/Server/apps/mpconsole/templates/base.html
+++ b/Server/apps/mpconsole/templates/base.html
@@ -156,7 +156,7 @@
 								<li>
 									<a href="{{ url_for('osmanage.profiles') }}"><i class="fa fa-list fa-fw"></i> Profiles</a>
 								</li>
-								{% if session.role[0] == 1 %}
+								{% if session.role[0] == 100 %}
 								<li>
 									<a href="{{ url_for('osmanage.appFilters') }}"><i class="fa fa-list fa-fw"></i> .app Access</a>
 								</li>
@@ -164,10 +164,10 @@
 									<a href="#"><i class="fa fa-database fa-fw"></i> Security Configuration<span class="fa arrow"></span></a>
 									<ul class="nav nav-third-level">
 										<li>
-											<a href="{{ url_for('patches.requiredList') }}"><i class="fa fa-list-alt fa-fw"></i> Rule Groups</a>
+											<a href="{{ url_for('osmanage.osConfig') }}"><i class="fa fa-list-alt fa-fw"></i> Rule Groups</a>
 										</li>
 										<li>
-											<a href="{{ url_for('patches.installedList') }}"><i class="fa fa-list-alt fa-fw"></i> Rules</a>
+											<a href="{{ url_for('osmanage.osConfig') }}"><i class="fa fa-list-alt fa-fw"></i> Rules</a>
 										</li>
 									</ul>
 								</li>
