Fix bug with edit accounts

--- a/Server/apps/mpconsole/templates/client_groups.html
+++ b/Server/apps/mpconsole/templates/client_groups.html
@@ -93,6 +93,8 @@ Client Groups
 							'count': 0,
 						{% endif %}
 					{% endfor %}
+				{% else %}
+						'count': 0,
 				{% endif %}
 			},
 			{% endfor %}
